              DiscSetSurface / DiscSetSurfaceData type that it works with.
        Class DiscSetSurface, DiscSetSurfaceData:
            - Merged into a single class DiscSetSurfaceDataImpl, with
              appropriate typedefs for DiscSetSurface and DiscSetSurfaceData.
            - Added copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
            - Function adjacentDisc() now returns an optional pair by value,
              instead of taking output variables by reference and
              returning newly allocated pointers that could be null.
        Class DiscSetTet, DiscSetTetData:
            - The destructors are no longer virtual.  Classes that own
              DiscSetTetData objects now need to know the specific subclass.
            - DiscSetTetData has a new typedef Data, and the old typedef
              DataPtr is now deprecated.
            - Added copy construction and copy assignment.
            - Added move construction, move assignment, and member/global
              swap() functions to DiscSetTetData.
            - DiscSetTet::discFromArc() now returns a std::pair instead
              of taking output variables by reference.
        Class DoubleDescription:
            - Renamed enumerateExtremalRays() to enumerate().  The old name
              is removed completely.
            - Can now output to either of Regina's arbitrary precision
              integer types, not only LargeInteger.
            - The main enumeration routine no longer takes an output iterator;
              instead it takes a callable object (e.g., a lambda).
            - The main enumeration now returns each ray by rvalue reference,
              not by pointer to a newly allocated object.
        Class EnableIf<condition, T, defaultValue>:
            - Added to support data members that only appear for some
              template parameters (such as validity and link orientability