@@ -595,6 +595,31 @@ class GluingPerms : public Output<GluingPerms<dim>> {
             const;
 
         /**
+         * Determines if this and the given gluing permutation set are
+         * identical.
+         *
+         * To be identical, the two sets must use identical facet pairings
+         * and all of their corresponding permutations must be the same.
+         *
+         * @param other the gluing permutation set to compare with this.
+         * @return \c true if and only if this and the given set are identical.
+         */
+        bool operator == (const GluingPerms& other) const;
+
+        /**
+         * Determines if this and the given gluing permutation set are
+         * not identical.
+         *
+         * To be identical, the two sets must use identical facet pairings
+         * and all of their corresponding permutations must be the same.
+         *
+         * @param other the gluing permutation set to compare with this.
+         * @return \c true if and only if this and the given set are not
+         * identical.
+         */
+        bool operator != (const GluingPerms& other) const;
+
+        /**
          * Writes a short text representation of this object to the
          * given output stream.
          *
@@ -798,6 +823,18 @@ inline Perm<dim+1> GluingPerms<dim>::indexToGluing(
             Perm<dim+1>::extend(Perm<dim>::Sn[index]) *
             Perm<dim+1>(facet, dim);
     }
+}
+
+template <int dim>
+inline bool GluingPerms<dim>::operator == (const GluingPerms& other) const {
+    return pairing_ == other.pairing_ && std::equal(permIndices_,
+        permIndices_ + (size() * (dim + 1)), other.permIndices_);
+}
+
+template <int dim>
+inline bool GluingPerms<dim>::operator != (const GluingPerms& other) const {
+    return pairing_ != other.pairing_ || ! std::equal(permIndices_,
+        permIndices_ + (size() * (dim + 1)), other.permIndices_);
 }
 
 template <int dim>
