@@ -125,6 +125,24 @@ class Text : public Packet {
          */
         void setText(std::string text);
 
+        /**
+         * Determines if this and the given packet contain the same text.
+         *
+         * @param other the text packet to compare with this.
+         * @return \c true if and only if this and the given packet
+         * contain the same text.
+         */
+        bool operator == (const Text& other) const;
+
+        /**
+         * Determines if this and the given packet do not contain the same text.
+         *
+         * @param other the text packet to compare with this.
+         * @return \c true if and only if this and the given packet
+         * do not contain the same text.
+         */
+        bool operator != (const Text& other) const;
+
         void writeTextShort(std::ostream& out) const override;
         void writeTextLong(std::ostream& out) const override;
 
@@ -174,6 +192,14 @@ inline void Text::setText(std::string text) {
 
     ChangeEventSpan span(*this);
     text_ = std::move(text);
+}
+
+inline bool Text::operator == (const Text& other) const {
+    return text_ == other.text_;
+}
+
+inline bool Text::operator != (const Text& other) const {
+    return text_ != other.text_;
 }
 
 inline void Text::writeTextShort(std::ostream& o) const {
