@@ -94,6 +94,7 @@ PYBIND11_MODULE(regina, m) {
         .value("BY_VALUE", regina::python::BY_VALUE)
         .value("BY_REFERENCE", regina::python::BY_REFERENCE)
         .value("NEVER_INSTANTIATED", regina::python::NEVER_INSTANTIATED)
+        .value("DISABLED", regina::python::DISABLED)
         ;
 
     addGlobalArray(m);
